--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.urieltan.taxi_accounting.session.AnotherActivity">
+        </activity>
+        <activity android:name="com.urieltan.taxi_accounting.session.AddItemActivity">
+        </activity>
+
+
     </application>
 
 </manifest>
